# datadriven

./: .gitignore  AGENTS.md  CMakeLists.txt  Justfile  README.md  flake.nix
.github/workflows/: ci.yml
cmake/: datadrivenConfig.cmake.in
include/datadriven/: datadriven.hpp
include/datadriven/internal/: benchmark.hpp  platform.hpp  string_util.hpp  trim_space.hpp  types.hpp
src/: benchmark.cpp  line_parser.cpp  platform.cpp  runner.cpp  string_util.hpp  test_data_reader.cpp  test_data_reader.hpp  walk.cpp
tests/: benchmark_stats_test.cpp  benchmark_test.cpp  parse_line_test.cpp  platform_test.cpp  reader_test.cpp  rewrite_test.cpp  runner_test.cpp  scan_args_test.cpp  subtest_test.cpp  test_paths.hpp  walk_test.cpp
tests/testdata/: benchmark  directive  multiline  retry  string  subtest
tests/testdata/rewrite/: basic-after  basic-before  eof-after  eof-before
tests/testdata/walk/: ext.test  noext
tools/: datadriven-clear.cpp
